fixed polygon visibility

--- a/leaflet/Wetlands/css/bootstrapSuperHero.css
+++ b/leaflet/Wetlands/css/bootstrapSuperHero.css
@@ -4731,7 +4731,7 @@ input[type="button"].btn-block {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #071F56;
+  background-color: #0A2A73;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0;
